--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,79 @@
+#modal-row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+img {
+    vertical-align: middle;
+}
+
+button.close {
+    position: absolute;
+    opacity: 1;
+    height: 50px;
+    width: 50px;
+    top: 11px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+}
+
+button, input, optgroup, select, textarea {
+    margin: -20px;
+}
+
 #text-div {
-    float: right;
-    padding: 10px;
+    padding-top: 20px; 
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.welcome-text {
+    margin-bottom: 0px;
+}
+
+.industry-text{
+    font: Proxima-Nova-Regular, sans-serif;
+    font-size: 9px;
+    margin: 5px 0px;
+}
+
+.subscribe-text {
+    font: Linotype-Didot-Roman, serif;
+    font-size: 14px;
+}
+
+#violet-text{
+    font-weight: bold;
+    margin-bottom: 0px;
+    font-size: 25px;
+}
+
+.modal#welcome-modal form input[type="email"] {
+    padding: 8px 6px 7px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: 8px 6px 7px;
+    font-size: 9px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background: transparent;
+    border: 1px solid #000;
+    border-radius: 0px;
+    margin-top: -8px;
+    text-align: center;
+}
+
+.btn-dark {
+    text-align: center;
+    border-radius: 0px;
+    font-size: 10px;
+    margin-top: 28px;
+    background: #000;
 }
 
